changes resolving tasks 3

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="hero">
             <h1>The Latin News</h1>
         </section>
-        <section calss="articole">
+        <section class="articole">
             <article>
                 <h3>Heading 1</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis officia magnam maiores saepe
@@ -46,7 +46,7 @@
                     Temporibus placeat ex, libero sapiente facere quaerat explicabo omnis in provident debitis excepturi
                     distinctio error recusandae, nobis ducimus voluptatem eum?</p>
             </article>
-            <article>
+            <article class="tree">
                 <h3>Heading 2</h3>
                 <p>Culpa reiciendis laboriosam iste ducimus accusantium delectus praesentium aspernatur officia! Fugiat
                     nihil eaque quod provident, nam, aut necessitatibus assumenda omnis praesentium, eveniet porro
